--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # This is an implicit value, here for clarity
 --index-url https://pypi.python.org/simple/
 
-web==0.38
+web.py==0.38
 numpy==1.8.0rc1
